--- a/AgenticAi/.env
+++ b/AgenticAi/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=mongodb+srv://zaterahmed62:test234@cluster0.iiarl.mongodb.net/?appName=Cluster0
+Qdrant_Api_Key=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.ti84L0q-Dw35EZ_yD6P6gvTD3aciw8wQZa1cPvGca7w
+Qdrant_URL=https://f350a49c-0c94-41d1-9978-731d74603772.eu-central-1-0.aws.cloud.qdrant.io:6333
+OPENAI_API_KEY=01Gu-xIiEQJWwuikkIdaPSSViTJLBpiUN9erLplVzCDJPErt8Qz8EcQ_t3YtzerzjpZ1wTNqof74JIYOfG
