--- a/AgenticAi/.env
+++ b/AgenticAi/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb+srv://zaterahmed62:test234@cluster0.iiarl.mongodb.net/?appName=Cluster0
+DATABASE_URL=mongodb://localhost:27017/
 Qdrant_Api_Key=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.LhBcDCBvCaYaKqHfJ13UU5OQSb69o-utGsuuHQHm-D8
 Qdrant_URL=http://localhost:6333
 OPENAI_API_KEY=01Gu-xIiEQJWwuikkIdaPSSViTJLBpiUN9erLplVzCDJPErt8Qz8EcQ_t3YtzerzjpZ1wTNqof74JIYOfG
