--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+agno==2.3.11
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
@@ -40,6 +41,7 @@ langchain-experimental==0.4.1
 langchain-openai==1.1.2
 langchain-qdrant==1.1.0
 langchain-text-splitters==1.0.0
+langgraph==1.0.4
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.15
